# rubiks_cubot

./: .gitignore  README.md  color_scanner.py  main.py  move_space.py  pyproject.toml  sequence.py  simulate.py  transform.py  visualizations.py
move_set_conversions/: __init__.py  translate_to_robot.py  translate_to_solver.py
notes/: conversions.md  notes.md  spaces.md
src/: color_scanner.py  cube_utils.py  drive_bot.py  solver.py  transform.py
src/move_set_conversions/: translate_to_constrained.py  translate_to_robot.py
src/visualizations/: animations.py  visualizations.py
